imp updates cnr pdf , images

--- a/settings.yaml
+++ b/settings.yaml
@@ -3,10 +3,11 @@ baserow:
   api_token: w5YLuEJF6pTm2HfrmlFBQpJYRhMiurdG
   sku_mapping_table_id: 598590
   combo_sku_table_id: 598588
-  inventory_table_id: 598587
+  inventory_table_id: 599869
   processed_sales_data_table_id: 598432
   category_table_id: 598433
   purchase_orders_table_id: 598617
+  catalogue_table_id: 600174
   inventory_warehouse_columns:
   - TLCQ
   - PNQ2
